tests/ui/packed/packed-struct-borrow-element-64bit.stderr
error[E0793]: reference to packed field is unaligned
  --> $DIR/packed-struct-borrow-element-64bit.rs:13:15
   |
LL |     let brw = &foo.baz;
   |               ^^^^^^^^
   |
   = note: packed structs are only aligned by one byte, and many modern architectures penalize unaligned field accesses
   = note: creating a misaligned reference is undefined behavior (even if that reference is never dereferenced)
   = help: copy the field contents to a local variable, or replace the reference with a raw pointer and use `read_unaligned`/`write_unaligned` (loads and stores via `*p` must be properly aligned even when using raw pointers)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0793`.
